<resources>
    <string name="app_name">SmartAlert</string>
    <string name="your_email_auth">Your Email</string>
    <string name="your_password_auth">Your Password</string>
    <string name="login_auth">Login</string>
    <string name="sign_up_auth">Sign Up</string>
    <string name="login_error_auth">Login Error</string>
    <string name="error_auth">Error</string>
    <string name="unknown_error_auth">Unknown Error, please try again!</string>
    <string name="signup_error_auth">Sign Up Error</string>
    <string name="email_password_error">Please provide your Email and Password.</string>
    <string name="email_error">Please provide your Email as well.</string>
    <string name="password_error">Please provide your Password as well.</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="grand_permission">Grand permission to Sign Up.</string>
    <string name="not_valid_number">Not a Valid Number!</string>
    <string name="phone_number_updated">Phone Number Updated</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="app_not_permitted_location">This application is not permitted to get user\'s location.</string>
    <string name="enable_gps">Please enable GPS to update your location.</string>
    <string name="location_updated">Location Updated</string>
    <string name="post_a_dangerous_situation">Post a Dangerous Situation</string>
    <string name="in_this_section_you">In this section, you can post/update the contact and/or location info we hold for you.</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="send_your_phone_number">Send your Phone Number</string>
    <string name="send_current_location">Send Current Location</string>
    <string name="enable_gps_to">Please enable the GPS to extract the location.</string>
    <string name="process_image">Processing Image…</string>
    <string name="image_process">Image Processed</string>
    <string name="process_failed">Process Failed</string>
    <string name="provide_description">Please provide a description of the situation.</string>
    <string name="request_uploaded">The Dangerous Situation Request has been uploaded.</string>
    <string name="success">Success</string>
    <string name="forest_fire">Forest Fire</string>
    <string name="city_fire">City Fire</string>
    <string name="flood">Flood</string>
    <string name="earthquake">Earthquake</string>
    <string name="tornado">Tornado</string>
    <string name="other">Other</string>
    <string name="forest_fire_alert">There is a forest fire near yor location, you are advised to leave the forest.</string>
    <string name="city_fire_alert">There is a city fire near your location, evacuate the neighborhood to be safe.</string>
    <string name="flood_alert">There is a flood near your location, you are advised to get to a high ground to be safe.</string>
    <string name="earthquake_alert">There is an earthquake in progress, evacuate the buildings and go to an open area.</string>
    <string name="tornado_alert">There is a tornado near you, get to a protected indoors location for your safety.</string>
    <string name="other_alert">A dangerous situation is in progress near your location, be cautious.</string>
    <string name="alert">Alert: </string>
    <string name="times_reported">Times Reported: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="location">Location\n</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="location_address">Location Address: </string>
    <string name="no_users">No Users to be Alerted</string>
    <string name="there_are_no_users">There are no known users near this Dangerous Situation.</string>
    <string name="permission_denied_sms">This application is not permitted to send SMSs.</string>
    <string name="advice">Advice from the civil protection: </string>
    <string name="alert_sent">Alert Sent</string>
    <string name="alert_sms_sent">An alert SMS has been sent to nearby users.</string>
    <string name="upload_a_possibly_dangerous_situation_here">Upload a Possibly Dangerous Situation Here!</string>
    <string name="your_description">Your Description</string>
    <string name="click_the_grey_rectangular_to_upload_o_photo">Click the grey rectangular to upload o photo.</string>
    <string name="upload_dangerous_situation">Upload Dangerous Situation</string>
    <string name="send_alert_button">Send Alert</string>
    <string name="test_text">text</string>
    <string name="no_dangerous_situations_are_reported_yet">No dangerous situations are reported yet.</string>
    <string name="statistics_available">Statistics Available</string>
    <string name="you_can_see_here">You can see here how many alerts have been triggered for each Dangerous Situation Category.</string>
    <string name="loading">Loading…</string>
    <string name="forest_fires_alerts">Forest Fires Total Alerts: </string>
    <string name="city_fires_alerts">City Fires Total Alerts: </string>
    <string name="floods_alerts">Floods Total Alerts: </string>
    <string name="earthquakes_alerts">Earthquakes Total Alerts: </string>
    <string name="tornadoes_alerts">Tornadoes Total Alerts: </string>
    <string name="others_alerts">Other Situations Total Alerts: </string>
    <string name="admin_main_menu">Admin Main Menu</string>
    <string name="check_dangerous_situations">Check Dangerous Situations</string>
    <string name="view_statistics">View Statistics</string>
</resources>